k8s/kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
  namespace: kibana
spec:
  ports:
    - port: 5601
      name: http
  selector:
    app: kibana
  type: ClusterIP
